add message attachments
