# app/Http/Controllers/Api/V1/MessageController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\Api\V1;
 
 use App\Model\Guest;
 use App\Model\Message;
+use App\Model\MessageAttachment;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Validator;
@@ -12,10 +13,12 @@ class MessageController extends Controller
 {
     public function range()
     {
-        $message = Message::find(1);
+        $message = Message::with('attachments')->find(15);
+
         if (empty($message)) {
             return response()->json(['status' => 'FAIL', 'code' => 100001, 'msg' => '找不到相关的记录']);
-        }
+         }
+
         return response()->json([
             'status' => 'SUCCESS',
             'code' => 0,
@@ -25,7 +28,7 @@ class MessageController extends Controller
 
     public function history()
     {
-        $paginates = Message::where('id', '>', 0)->paginate();
+        $paginates = Message::with('attachments')->where('id', '>', 0)->paginate();
         if (empty($paginates)) {
             return response()->json(['status' => 'FAIL', 'code' => 100001, 'msg' => '找不到相关的记录']);
         }
@@ -55,16 +58,39 @@ class MessageController extends Controller
         $guest = Guest::where('uid', $request->input('uid'))->first();
         if ($guest) {
             $uploadedFiles = $request->allFiles();
+            $hasUploaded = [];
             foreach ($uploadedFiles['file'] as $uploadedFile) {
-                $uploadedFile->store('message');
+                $extension = $uploadedFile->getClientOriginalExtension();
+                if (!in_array($extension, config('message.attachment.extension'))) {
+                    continue;
+                }
+                $mimeType = $uploadedFile->getMimeType();
+                if (!in_array($mimeType, config('message.attachment.mimetype'))) {
+                    continue;
+                }
+                $path = $uploadedFile->store('message');
+                if (!empty($path)) {
+                    $hasUploaded[] = [
+                        'mimeType' => $mimeType,
+                        'path' => $path
+                    ];
+                }
             }
             $message = new Message();
             $message->message = $request->input('message');
             $message->unique_id = $unique_id;
             $message->guest_id = $guest->id;
-            $message->images = 1;
             $message->has_active = 0;
             if ($message->save()) {
+                if (count($hasUploaded) > 0) {
+                    foreach ($hasUploaded as $upload) {
+                        $attachment = new MessageAttachment();
+                        $attachment->message_id = $message->id;
+                        $attachment->path = $upload['path'];
+                        $attachment->mime_type = $upload['mimeType'];
+                        $attachment->save();
+                    }
+                }
                 return response()->json([
                     'status' => 'SUCCESS',
                     'code' => 0,
